# cppautogui

./: AUTHORS.txt  CMakeLists.txt  README.md
bindings/haskell/: hsautogui.cabal
bindings/haskell/src/: CppAutoGUI.hs
bindings/haskell/tests/: Spec.hs
cppautogui/: cppautogui.cpp  cppautogui_osx.cpp  cppautogui_win.cpp  cppautogui_x11.cpp  cppautogui_x11.h
docs/: Makefile  conf.py  index.rst  install.rst  make.bat  quickstart.rst  roadmap.rst  tests.rst
src/: cppautogui.cpp  cppautogui.h  cppautogui_osx.cpp  cppautogui_osx.h  cppautogui_win.h  data.h  image.cpp  image.h  png.cpp
tests/: test_cppautogui.cpp
