name:                hsautogui
version:             0.1.0.0
synopsis:            Haskell bindings for CppAutoGUI
description:         Haskell bindings for CppAutoGUI using inline-c-cpp
license:             BSD3
license-file:        LICENSE
author:              Junji Hashimoto
maintainer:          junji.hashimoto@example.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     CppAutoGUI
  other-modules:       Paths_hsautogui
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <5,
                       inline-c-cpp >=0.9.0.0,
                       inline-c >=0.9.0.0,
                       template-haskell >=2.10
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Spec.hs
  build-depends:       base >=4.7 && <5,
                       hsautogui,
                       hspec >=2.7.0,
                       inline-c-cpp >=0.9.0.0,
                       inline-c >=0.9.0.0,
                       template-haskell >=2.10
  default-language:    Haskell2010
